# state-machine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Examples/: Payload1.cpp  Payload1.h  Payload2.cpp  Payload2.h  Payload3.cpp  Payload3.h  StateA.cpp  StateA.h  StateB.cpp  StateB.h  StateC.cpp  StateC.h  Transition1.cpp  Transition1.h  Transition2.cpp  Transition2.h  Transition3.cpp  Transition3.h  Transition4.cpp  Transition4.h
StateMachine/: IPayload.h  IState.h  ITransition.h  StateMachine.cpp
